--- a/store.html
+++ b/store.html
@@ -13,9 +13,9 @@
       <section class="container">
         <h1 class="branding">Happy Coco</h1>
         <nav>
-          <ul class="navbar">
-            <li class="current"><a href="index.html">Home</a></li>
-            <li><a href="store.html">Store</a></li>
+           <ul class="navbar">
+            <li><a href="index.html">Home</a></li>
+            <li class="current"><a href="store.html">Store</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
@@ -24,7 +24,8 @@
 
     <article id="introduction">
       <section class="container" id="information">
-	<h2>Little things for great moments</h2>
+	<p>Beautiful things are coming</p>
+  	<img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" width="20%" />
       </section>
     </article>
 
